--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
                 <form>
                     <div class="row my-2">
                         <label for="name" class="form-label">Name :</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter full name">
+                        <input type="text" class="form-control" id="name" placeholder="Enter full name" required>
                     </div>
                     <div class="row my-2">
                         <label for="fathername" class="form-label">Father's Name :</label>
-                        <input type="text" class="form-control" id="fathername" placeholder="Enter Father's name">
+                        <input type="text" class="form-control" id="fathername" placeholder="Enter Father's name" required>
                     </div>
                     <div class="row my-2">
                         <label for="mothername" class="form-label">Mother's Name :</label>
-                        <input type="text" class="form-control" id="mothername" placeholder="Enter Mother's name">
+                        <input type="text" class="form-control" id="mothername" placeholder="Enter Mother's name" required>
                     </div>
                     <div class="row my-2">
                         <label for="phonenumber" class="form-label">Phone Number :</label>
-                        <input type="tel" id="phonenumber" class="form-control" placeholder="Enter Phone Number">
+                        <input type="tel" id="phonenumber" class="form-control" placeholder="Enter Phone Number" required>
                     </div>
 
                     <div class="row my-2">
                         <label for="email" class="form-label">Email :</label>
-                        <input type="email" id="email" class="form-control" name="email">
+                        <input type="email" id="email" class="form-control" name="email" placeholder="Enter Email" required>
                     </div>
                     <div class="row my-2">
 
@@ -123,7 +123,7 @@
                         </div>
                         <div class="row my-2">
                             <div class="col-6">
-                                <button type="submit" class="btn btn-primary btn-lg" value="submit">Submit</button>
+                                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                                 
                             </div>
                             <div class="col-6">
